<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <!--dependencies versions-->
        <junit.jupiter.version>5.6.2</junit.jupiter.version>
        <assertj.core.version>3.15.0</assertj.core.version>
        <jgrapht.core.version>1.4.0</jgrapht.core.version>
        <jblas.version>1.2.4</jblas.version>
        <biojava.alignment.version>5.3.0</biojava.alignment.version>
        <uniport.japi.version>1.0.30</uniport.japi.version>
        <swingx.version>1.6.1</swingx.version>
        <maven-bundle-plugin.version>4.2.1</maven-bundle-plugin.version>
        <Apache-Commons-Collections.version>3.2.2</Apache-Commons-Collections.version>
        <commons-io.version>2.5</commons-io.version>
        <tablesaw.version>LATEST</tablesaw.version>
        <!--plugins versions-->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
    </properties>
    <groupId>BHT</groupId>
    <artifactId>Algorithms</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nexus-aliyun</id>
            <name>Nexus aliyun</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
        </repository>
        <repository>
            <id>ebi-repo</id>
            <name>ebi-repo</name>
            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
        </repository>
    </repositories>

    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-assembly-plugin</artifactId>-->
<!--                <version>3.3.0</version>-->
<!--                <configuration>-->
<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
<!--                    <archive>-->
<!--                        <manifest>-->
<!--                            <mainClass>-->
<!--                                Algorithms.Graph.HGA.HGA-->
<!--                            </mainClass>-->
<!--                        </manifest>-->
<!--                    </archive>-->
<!--                    <descriptorRefs>-->
<!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--                        <descriptorRef>bin</descriptorRef>-->
<!--                        <descriptorRef>src</descriptorRef>-->
<!--                        <descriptorRef>project</descriptorRef>-->
<!--                    </descriptorRefs>-->
<!--                    <descriptors>-->
<!--                        <descriptor>src/assembly/HGAAssembly.xml</descriptor>-->
<!--                    </descriptors>-->
<!--                    <filters>-->
<!--                        <filter>src/assembly/filter.properties</filter>-->
<!--                    </filters>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>trigger-assembly</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>single</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>14</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <!--        JUNIT5 for unit testing-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.core.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- java linear algebra lib for algorithms building -->
        <dependency>
            <groupId>org.jblas</groupId>
            <artifactId>jblas</artifactId>
            <version>${jblas.version}</version>
        </dependency>
        <!--java data science and visualize package-->
        <dependency>
            <groupId>tech.tablesaw</groupId>
            <artifactId>tablesaw-core</artifactId>
            <version>${tablesaw.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>tech.tablesaw</groupId>
            <artifactId>tablesaw-jsplot</artifactId>
            <version>${tablesaw.version}</version>
            <optional>true</optional>
        </dependency>
        <!--network data structure base-->
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
            <version>${jgrapht.core.version}</version>
        </dependency>
        <!--tree UI-->
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swingx</artifactId>
            <version>${swingx.version}</version>
        </dependency>
        <!--some tools-->
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>${Apache-Commons-Collections.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
    </dependencies>

</project>